syntax = "proto3";

package message;

option go_package = "Alphabet-Count/proto/generated";

message LetterMessage {
  int64 messageId = 1;
  int64 timeStamp = 2;
  string letter = 3;
}